# mine_game

./: .flake8  .gitignore  README.md  primer.cmd  primer.ps1  pyproject.toml  pyvenv.cfg  setupMyProject.ps1
.devcontainer/: devcontainer.json  setupMyDevContainer.ps1
.github/workflows/: python-app.yml
Scripts/: activate  activate.bat
mine_game/: cli.py
mine_game/application/: game_status.py  mine_game.py
mine_game/domain/: mine.py  player.py
mine_game/domain/board/: board.py  direction.py  mine_generator.py
mine_game/ui/: console.py
src/application/: mine_game.py
src/domain/: board.py  mine.py  player.py
src/domain/board/: board.py  direction.py  mine_generator.py
testing/: specification.py
testing/application/: mine_game_steps.py  mine_game_test.py
testing/domain/: board_steps.py  board_test.py  board_test.specs.py
testing/domain/board/: board_steps.py  board_test.py  mine_generator_steps.py  mine_generator_test.py
testing/domain/board/fakes/: fake_mine_generator.py
tests/application/: mine_game_steps.py  mine_game_test.py
tests/domain/board/: board_steps.py  board_test.py  mine_generator_steps.py  mine_generator_test.py
tests/domain/board/fakes/: fake_mine_generator.py
