[tool.poetry]
name = "mine_game"
package-mode = false
version = "0.1.0"
description = "A simple mine game"
authors = ["Sean Jennings"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
colorama = "^0.4.6"
iniconfig = "^2.0.0"
packaging = "^23.2"
pluggy = "^1.4.0"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
flake8 = "^7.0.0"
black = "^24.3.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "testing"
]

[virtualenvs]
create = true
in-project = true