[tool.poetry]
name = "mine_game"
package-mode = false
version = "0.1.0"
description = "A simple mine game"
authors = ["Sean Jennings"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.dev-dependencies]
colorama = "^0.4.6"
iniconfig = "^2.0.0"
packaging = "^23.2"
pluggy = "^1.4.0"
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
flake8 = "^7.0.0"
black = "^24.3.0"

[tool.poetry.scripts]
mine_game = "mine_game.cli:main"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
  "tests"
]
pythonpath = [
  ".", "mine_game",
]
